hphp/hack/test/typecheck/nameof/parsing/nameof_efun.php.exp
File "nameof_efun.php", line 5, characters 12-38:
`nameof` can only be used with a class (Parsing[1002])
