hphp/hack/test/typecheck/nameof/parsing/nameof_efun.php
<?hh

class C {
  public static function f(): void {
    nameof function($x) { return $x; };
  }
}
